--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,3 +8,7 @@ li.list-group-item {
 a.nav-link.horizontal-group-item {
     padding: 8px 8px 8px 0px;
 }
+canvas {
+    background-color: black;
+    padding: 0 !important;
+}
