--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,9 @@ a.nav-link:hover {
 #aboutMe{
     font-weight: 600;
 }
+.portfolio-main {
+    margin-bottom: 2.5em;
+}
 
 @media only screen and (max-width: 576px) {
     main.container {
