--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,6 +40,18 @@ a.nav-link:hover {
     margin-bottom: 2.5em;
 }
 
+.portfolio {
+    margin: 1em 0 1em 0;
+    width: 500px;
+    height: 300px;
+    transition: width 1s, height 1.5s;
+  }
+  
+  .portfolio:hover {
+    width: 525px;
+    height: 325px;
+  }
+
 @media only screen and (max-width: 576px) {
     main.container {
       margin-bottom: 3rem;
