--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,7 @@ a.nav-link:hover {
 }
 
 .portfolio {
-    margin: 1em 0 1em 0;
+    margin: 1em 0 0em 0;
     width: 500px;
     height: 300px;
     transition: width 1s, height 1.5s;
@@ -50,7 +50,46 @@ a.nav-link:hover {
   .portfolio:hover {
     width: 525px;
     height: 325px;
+    margin: 0;
   }
+
+  .container {
+    position: relative;
+    width: 100%;
+  }
+  
+  .image {
+    opacity: 1;
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .img-container:hover .image {
+    opacity: 0.3;
+  }
+  
+  .img-container:hover .middle {
+    opacity: 1;
+  }
+  
+  .text {
+    color:black;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
+
+
 
 @media only screen and (max-width: 576px) {
     main.container {
