--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,3 +96,9 @@ a.nav-link:hover {
       margin-bottom: 3rem;
     }
   }
+
+  @media only screen and (min-width: 576px) {
+    #navbarNavAltMarkup > ul > ul {
+        width: 22px;
+    }
+  }
