--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,6 +89,15 @@ a.nav-link:hover {
     padding: 16px 32px;
   }
 
+  .avatar {
+    display: flex;
+    position: relative;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+
 
 
 @media only screen and (max-width: 576px) {
