--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h3{font-weight:300;font-size: 35px;line-height:38px;margin-bottom:40px;}
 .connect-icon a:hover{opacity: 0.5;transition: all 0.5s ease;}
 
 .connect-icon a.behance{margin-top: -10px;}
-.prof-links{margin: 250px 0 50px 0;}
+.prof-links{display: flex; margin: 250px 0 50px 0;}
 
 
 .portfolio ul li{position: relative;}
