--- a/style.css
+++ b/style.css
@@ -243,21 +243,21 @@ h3 {
 
 a.work.work-btn {
   display: inline-block;
-  padding: 0.35em 1.2em;
-  border: 0.1em solid #333;
+  padding: 0.1em 0.5em;
+  border: 0.1em solid rgba(27,31,35,.15);
   margin: 0 0.3em 0.3em 0;
   border-radius: 0.12em;
   box-sizing: border-box;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
-  color: #333;
+  color: #0366d6;
   text-align: center;
   transition: all 0.2s;
 }
 a.work.work-btn:hover {
   color: #ffffff;
-  background-color: rgba(0, 0, 0, 0.7);;
+  background-color: #0366d6;
 }
 @media all and (max-width: 30em) {
   a.work.work-btn {
